[tool.poetry]
name = "pynator"
version = "0.1.1"
description = ""
authors = ["hackirby <145487845+hackirby@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
